2022-02-11  Alan Bujtas  <zalan@apple.com>

        css/css-writing-modes/direction-propagation-body-contain-root.html asserts
        https://bugs.webkit.org/show_bug.cgi?id=234763
        <rdar://problem/87243336>

        Unreviewed gardening.

        * TestExpectations: it looks to have progressed.

2022-02-11  Antoine Quint  <graouts@webkit.org>

        [model] standalone model documents should be interactive
        https://bugs.webkit.org/show_bug.cgi?id=236493

        Reviewed by Dean Jackson.

        Add a test that checks that the <model> element created for standalone
        documents has the "interactive" attribute.

        * http/tests/model/model-document-interactive-expected.txt: Added.
        * http/tests/model/model-document-interactive.html: Added.

2022-02-11  Jon Lee  <jonlee@apple.com>

        Unreviewed gardening.

        Update fuzzy data based on EWS results to support b231828.
        * css3/color-filters/color-filter-text-decoration-shadow.html:
        * fast/text/system-font-fallback.html:

2022-02-11  Jon Lee  <jonlee@apple.com>

        Unreviewed gardening.

        Update fuzzy data based on EWS results to support b231828.
        * css3/blending/background-blend-mode-body-transparent-color-and-image.html:
        * css3/calc/border-radius.html:
        * svg/gradients/spreadMethodDiagonal3.svg:
        * svg/gradients/spreadMethodDiagonal4.svg:

2022-02-11  Youenn Fablet  <youenn@apple.com>

        Support remote video frames in WebRTC video pipeline
        https://bugs.webkit.org/show_bug.cgi?id=236356

        Reviewed by Kimmo Kinnunen.

        Enabling remote video frames for below tests.

        * webrtc/video-mute-vp8.html:
        * webrtc/video-mute.html:
        * webrtc/video-rotation.html:
        * webrtc/video.html:

2022-02-11  Kimmo Kinnunen  <kkinnunen@apple.com>

        Introduce a RemoteMediaSampleProxy to represent captured video frames used in Media Streams and present in GPUP